--- a/src/app/chat/chat-main/chat-main.component.html
+++ b/src/app/chat/chat-main/chat-main.component.html
@@ -7,25 +7,27 @@
 } @else {
 <div class="grid">
   <div class="col-2">
-    <div class="flex-row">
-      <b>Chat Channels</b><mat-icon class="cursor-pointer" (click)="addChatChannel()">add</mat-icon>
-    </div>
-    <div class="flex-row">
-      <div class="col-12">
-        <mat-radio-group (change)="handleChatChannelChanged($event)">
-          @for (chatChannel of chatChannels; track chatChannel; let i = $index) {
-          @if (i === 0) {
-          <mat-radio-button [value]="chatChannel.id" [checked]="true">{{chatChannel.chatChannelName}}</mat-radio-button>
-          } @else {
-          <mat-radio-button [value]="chatChannel.id"
-            [checked]="false">{{chatChannel.chatChannelName}}</mat-radio-button>
-          }
-          <br />
-          @if (i !== chatChannels.length - 1) {
-          <mat-divider></mat-divider>
-          }
-          }
-        </mat-radio-group>
+    <div class="sidenav-content">
+      <div class="flex-row">
+        <b>Chat Channels</b><mat-icon class="cursor-pointer" (click)="addChatChannel()">add</mat-icon>
+      </div>
+      <div class="flex-row">
+        <div class="col-12">
+          <mat-radio-group (change)="handleChatChannelChanged($event)">
+            @for (chatChannel of chatChannels; track chatChannel; let i = $index) {
+            @if (i === 0) {
+            <mat-radio-button [value]="chatChannel.id" [checked]="true">{{chatChannel.chatChannelName}}</mat-radio-button>
+            } @else {
+            <mat-radio-button [value]="chatChannel.id"
+              [checked]="false">{{chatChannel.chatChannelName}}</mat-radio-button>
+            }
+            <br />
+            @if (i !== chatChannels.length - 1) {
+            <mat-divider></mat-divider>
+            }
+            }
+          </mat-radio-group>
+        </div>
       </div>
     </div>
   </div>
