delete chat channel

--- a/src/app/chat/chat-main/chat-main.component.scss
+++ b/src/app/chat/chat-main/chat-main.component.scss
@@ -1,17 +1,12 @@
-.chat-history {
-    padding-bottom: 100px;
-}
+// .chat-history {
+//     padding-bottom: 100px;
+//     height: 100%;
+// }
 
-.footer {
-    position: fixed;
-    bottom: 0;
-    background-color: #F5F5F5;
-    height: 100px;
-}
+// .footer {
+//     position: fixed;
+//     bottom: 0;
+//     background-color: #F5F5F5;
+//     height: 100px;
+// }
 
-.sidenav-content {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    overflow-y: scroll;
-}
