--- a/src/app/chat/chat-main/chat-main.component.html
+++ b/src/app/chat/chat-main/chat-main.component.html
@@ -16,10 +16,19 @@
           <mat-radio-group (change)="handleChatChannelChanged($event)">
             @for (chatChannel of chatChannels; track chatChannel; let i = $index) {
             @if (i === 0) {
-            <mat-radio-button [value]="chatChannel.id" [checked]="true">{{chatChannel.chatChannelName}}</mat-radio-button>
+            <div class="flex flex-wrap justify-content-start">
+              <mat-radio-button [value]="chatChannel.id" [checked]="true">
+                {{chatChannel.chatChannelName}}
+              </mat-radio-button>
+              <mat-icon (click)="deleteChannel($event, chatChannel)">delete_sweep</mat-icon>
+            </div>
             } @else {
-            <mat-radio-button [value]="chatChannel.id"
-              [checked]="false">{{chatChannel.chatChannelName}}</mat-radio-button>
+              <div class="flex flex-wrap justify-content-start">
+                <mat-radio-button [value]="chatChannel.id" [checked]="false">
+                  {{chatChannel.chatChannelName}}
+                </mat-radio-button>
+                <mat-icon (click)="deleteChannel($event, chatChannel)">delete_sweep</mat-icon>
+              </div>
             }
             <br />
             @if (i !== chatChannels.length - 1) {
@@ -48,8 +57,8 @@
     }
     <div class="footer col-8 flex flex-wrap align-items-center justify-content-center">
       <div class="w-full">
-        <form [formGroup]="inputForm"  class="w-12">
-          <mat-form-field class="w-12"> 
+        <form [formGroup]="inputForm" class="w-12">
+          <mat-form-field class="w-12">
             <textarea matInput id="textarea-chat" formControlName="input" class="w-12 h-12"
               (keydown.enter)="handleInputSend()"></textarea>
           </mat-form-field>
